--- a/test-output/ER_UM1_UserManagementTest.html
+++ b/test-output/ER_UM1_UserManagementTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-07-17 20:46:52</span>
+					<span class='suite-started-time'>2020-07-18 16:44:08</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 2m 47s+396ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 2m 6s+163ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 2m 47s+396ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 2m 6s+163ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-07-17 20:44:05</span> 
+							<span class='panel-lead suite-started-time'>2020-07-18 16:42:02</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-07-17 20:46:52</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-18 16:44:08</span> 
 						</div> 
 					</div>
 				</div>
@@ -257,17 +257,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='1ba7ec79-bead-4b16-b6ff-505d96a895cd'>
+										<li class='collection-item test displayed active pass ' extentid='b112b889-d809-4942-be69-efb35424a608'>
 											<div class='test-head'>
-												<span class='test-name'>ADMN069C-Verify mandatory login for a new user before saving any changes-Equipment-Edit </span>
+												<span class='test-name'>Syncin Process check in UM1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 20:46:14</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 20:46:24</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+525ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-18 16:44:08</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-18 16:44:08</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+11ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -284,45 +284,8 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:46:24</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN069C #</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='35610f86-8982-4ace-95ac-f52de7d9280f'>
-											<div class='test-head'>
-												<span class='test-name'>ADMN069D-Verify mandatory login for a new user before saving any changes-Equipment Delete </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 20:46:42</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 20:46:51</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 9s+904ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:46:51</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN069D #</td>
+																	<td class='timestamp'>16:44:08</td>
+																	<td class='step-details'>Test Case PASSED IS # Check #</td>
 																</tr>
 														</tbody>
 													</table>
