--- a/test-output/ER_UM2_UserPrivilagesTest.html
+++ b/test-output/ER_UM2_UserPrivilagesTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-07-17 22:46:32</span>
+					<span class='suite-started-time'>2020-07-18 16:47:50</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 29s+794ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 3m 41s+41ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 29s+794ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 3m 41s+41ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-07-17 22:46:03</span> 
+							<span class='panel-lead suite-started-time'>2020-07-18 16:44:09</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-07-17 22:46:32</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-18 16:47:50</span> 
 						</div> 
 					</div>
 				</div>
@@ -198,6 +198,10 @@
 											<td>ScriptVersion</td>
 											<td>1.0.0.0</td>
 										</tr>
+										<tr>
+											<td>VRT Version</td>
+											<td>1.1.0.3</td>
+										</tr>
 								</tbody>
 							</table>
 						</div>
@@ -253,17 +257,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='3e380e41-b4c4-411f-95b0-f26aa5d5b753'>
+										<li class='collection-item test displayed active pass ' extentid='414b8210-27ef-41f8-9f46-e934f71c0cc7'>
 											<div class='test-head'>
-												<span class='test-name'>ADMN119-Verify if Operator is unable to access the non-default privilege-Copy Files_Reports_Setup reports </span>
+												<span class='test-name'>Syncin Process check in UM2 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 22:46:08</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 22:46:32</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 23s+962ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-18 16:47:50</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-18 16:47:50</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+4ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -280,8 +284,8 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:46:32</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN119 #</td>
+																	<td class='timestamp'>16:47:50</td>
+																	<td class='step-details'>Test Case PASSED IS # Check #</td>
 																</tr>
 														</tbody>
 													</table>
