--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,951</td><td></td><td></td></tr>
+<tr><th colspan="8">UMRegressionSuite</th></tr>
+<tr><td><a href="#t0">UMTestRegression</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">843,477</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.UM3</td><td><a href="#m0">CADMN5</a></td><td rowspan="1">1595010435331</td><td rowspan="1">10447</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">UMRegressionSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">UMTestRegression &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.UM1</td><td><a href="#m0">Check</a></td><td rowspan="1">1595070848622</td><td rowspan="1">15</td></tr><tr class="passedodd"><td rowspan="1">com.vrt.testcases.UM2</td><td><a href="#m1">Check</a></td><td rowspan="1">1595071070407</td><td rowspan="1">4</td></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.UM3</td><td><a href="#m2">Check</a></td><td rowspan="1">1595071333010</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="1">com.vrt.testcases.UM4</td><td><a href="#m3">Check</a></td><td rowspan="1">1595071565567</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.vrt.testcases.UM3#CADMN5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>UMTestRegression</h2><h3 id="m0">com.vrt.testcases.UM1#Check</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.vrt.testcases.UM2#Check</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.vrt.testcases.UM3#Check</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.vrt.testcases.UM4#Check</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
