--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>UM3.CADMN5()[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
